...
                                      indicatorWeight: 3.0,
                                      tabs: [
                                        Tab(
                                          text: 'Create Account',
                                        ),
                                        Tab(
                                          key: ValueKey('Tab_jakp'),
                                          text: 'Log In',
                                        ),
                                      ],
                                      controller: _model.tabBarController,
                                      onTap: (i) async {
                                        [() async {}, () async {}][i]();
...
                                                            .fromSTEB(0.0, 0.0,
                                                                0.0, 16.0),
                                                    child: Container(
                                                      width: double.infinity,
                                                      child: TextFormField(
                                                        key: ValueKey(
                                                            'emailAddress_Create_4pzh'),
                                                        controller: _model
                                                            .emailAddressCreateTextController,
                                                        focusNode: _model
                                                            .emailAddressCreateFocusNode,
                                                        autofocus: true,
                                                        autofillHints: [
...
                                                            .fromSTEB(0.0, 0.0,
                                                                0.0, 16.0),
                                                    child: Container(
                                                      width: double.infinity,
                                                      child: TextFormField(
                                                        key: ValueKey(
                                                            'password_Create_owkg'),
                                                        controller: _model
                                                            .passwordCreateTextController,
                                                        focusNode: _model
                                                            .passwordCreateFocusNode,
                                                        autofocus: true,
                                                        autofillHints: [
...
                                                                  0.0,
                                                                  0.0,
                                                                  0.0,
                                                                  16.0),
                                                      child: FFButtonWidget(
                                                        key: ValueKey(
                                                            'Button_sesu'),
                                                        onPressed: () async {
                                                          logFirebaseEvent(
                                                              'SIGNUP_LOGIN_PAGE_GET_STARTED_BTN_ON_TAP');
                                                          logFirebaseEvent(
                                                              'Button_auth');
                                                          GoRouter.of(context)
...
                                                            .fromSTEB(0.0, 0.0,
                                                                0.0, 16.0),
                                                    child: Container(
                                                      width: double.infinity,
                                                      child: TextFormField(
                                                        key: ValueKey(
                                                            'emailAddress_Login_tpqe'),
                                                        controller: _model
                                                            .emailAddressLoginTextController,
                                                        focusNode: _model
                                                            .emailAddressLoginFocusNode,
                                                        autofocus: true,
                                                        autofillHints: [
...
                                                            .fromSTEB(0.0, 0.0,
                                                                0.0, 16.0),
                                                    child: Container(
                                                      width: double.infinity,
                                                      child: TextFormField(
                                                        key: ValueKey(
                                                            'password_Login_bmp4'),
                                                        controller: _model
                                                            .passwordLoginTextController,
                                                        focusNode: _model
                                                            .passwordLoginFocusNode,
                                                        autofocus: true,
                                                        autofillHints: [
...
                                                                  0.0,
                                                                  0.0,
                                                                  0.0,
                                                                  16.0),
                                                      child: FFButtonWidget(
                                                        key: ValueKey(
                                                            'Button_mxo4'),
                                                        onPressed: () async {
                                                          logFirebaseEvent(
                                                              'SIGNUP_LOGIN_PAGE_SIGN_IN_BTN_ON_TAP');
                                                          logFirebaseEvent(
                                                              'Button_auth');
                                                          GoRouter.of(context)
...
