...
                                        ),
                                      ),
                                      Align(
                                        alignment:
                                            AlignmentDirectional(0.0, 0.0),
                                        child: FFButtonWidget(
                                          key: ValueKey('Button_vkpa'),
                                          onPressed: () async {
                                            logFirebaseEvent(
                                                'GOAL_PAGE_PAGE_CREATE_GOAL_BTN_ON_TAP');
                                            logFirebaseEvent(
                                                'Button_bottom_sheet');
                                            await showModalBottomSheet(
...
                                                                    onPressed:
                                                                        () {
                                                                      print(
                                                                          'Button pressed ...');
                                                                    },
                                                                    text:
                                                                        'Completed',
                                                                    options:
                                                                        FFButtonOptions(
                                                                      width:
                                                                          98.0,
                                                                      height:
                                                                          35.0,
...
                                                                    onPressed:
                                                                        () {
                                                                      print(
                                                                          'Button pressed ...');
                                                                    },
                                                                    text:
                                                                        'Not Started',
                                                                    options:
                                                                        FFButtonOptions(
                                                                      width:
                                                                          100.0,
                                                                      height:
                                                                          35.0,
...
