...
                                            ),
                                      ),
                                    ),
                                    Container(
                                      width: double.infinity,
                                      child: TextFormField(
                                        key: ValueKey('TextField_3z5q'),
                                        controller: _model.textController,
                                        focusNode: _model.textFieldFocusNode,
                                        autofocus: false,
                                        obscureText: false,
                                        decoration: InputDecoration(
                                          isDense: true,
...
                                            CrossAxisAlignment.center,
                                        children: [
                                          Align(
                                            alignment:
                                                AlignmentDirectional(0.0, 0.0),
                                            child: FFButtonWidget(
                                              key: ValueKey('Button_923q'),
                                              onPressed: () async {
                                                logFirebaseEvent(
                                                    'A_IINSIGHTS_PAGE_GENERATE_BTN_ON_TAP');
                                                logFirebaseEvent(
                                                    'Button_update_page_state');
                                                _model.addToApiResponse(
...
